:bug: home > lists > fix responsive on small devices

--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -177,6 +177,7 @@
         
         @include small {
             grid-template-columns: repeat(2, 1fr);
+            margin-top: 2rem;
         }
     }
     
